client: fix left sidebar on small screen

--- a/client/src/components/debate/style.css
+++ b/client/src/components/debate/style.css
@@ -15,6 +15,11 @@
     margin-bottom: 30px;
 }
 
+#closed-card,
+#open-card {
+    user-select: none;
+}
+
 @media screen and (max-width: 1880px) {
     .debates.column {
         display: block;
